#=CHANGELOG
#==version 0.3.1_AuthSub
#* Git repo by mgornick to implement Authsub authentication into the GCal4Ruby gem
#==version 0.3.1
#* Fixed Event.find method to work with secondary calendars and google apps accounts.  Fix provided by groesser3.
#* Added max results to Calendar.find.
#==version 0.3.0
#* Rewrote Event.find to improve performance significantly.
#* Added improvements to event recurrence handling, including loading existing recurrences, changing recurring events to non recurring and vice versa.
#* Added support for initialization attributes to Event, Calendar, Service and Recurrence.
#* Fixed query string typo in Event.find.  Fix provided by nat.lownes.
#==version 0.2.11
#* Added support for GML elements in calendar events.  Fix provided by nat.lownes.
#* Fixed event status bug where cancelled events were marked confirmed.  Fix provided by rifraf.
#==version 0.2.10
#* Fixed library support for Google Hosted Apps accounts running in forced SSL mode.
#==version 0.2.9
#* Fixed small SSL redirect bug due to variable misnaming in base.rb.  Fix provided by JohnMetta
#==version 0.2.8
#* Merged changes from edruder and h13ronim from the unofficial github repo - http://github.com/h13ronim/gcal4ruby/commits/master
#==version 0.2.7
#* Added fix for finding events in calendars that have more than 25 entries
#==version 0.2.6
#* Added fix for updated google calendar XML per http://cookingandcoding.wordpress.com/2009/06/08/new-ruby-google-calendar-api-gem-gcal4ruby/#comment-183
#==version 0.2.5
#* Added calendar color support to to_iframe methods in Calendar and Service.
#==version 0.2.4
#* Fixed bug with ACL check in Calendar#load
#==version 0.2.3
#* Implemented to_iframe method for calendars and services to output embeddable iframe text.
#* Added switch to turn off ACL check for public calendars.  Can increase effeciency if turned off.
#==version 0.2.2
#* Fixed URL encoding problem in Event.find method.